kubernetes/apps/argocd/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  parentRefs:
    - name: eg-private
      namespace: envoy-gateway-system
      sectionName: http-admin
    - name: eg-private
      namespace: envoy-gateway-system
      sectionName: https-admin
  hostnames:
    - "argocd.admin.michaelmuzafarov.dev"
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
